--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="resume-item">
               <h4>HSC</h4>
               <h5>2016 - 2018</h5>
-              <p><em>Sylhet Science Technology College <br>Mirer moydan,Sylhet</em></p>
+              <p><em>Sylhet Science & Technology College <br>Mirer moydan,Sylhet</em></p>
 
          
           </div>
