--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Skill</h2>
           <p>As a beginner, i have gathered the following skills.Still now,I'm learning to improve skills.</p>
         </div>
 
